Fix blog card background issue in dark mode

--- a/docs/tools/01-glassmorphism-generator/GlassmorphismGenerator/style.module.css
+++ b/docs/tools/01-glassmorphism-generator/GlassmorphismGenerator/style.module.css
@@ -111,7 +111,7 @@
 
 .progressBar input[type="range"] {
   appearance: none;
-  background: #f3f3f3;
+  background: var(--progress-bar-background-color);
   height: 10px;
   border-radius: 4px;
 }
